@@ -34,6 +34,7 @@ Specifically, the GPL parts of FFmpeg are
     - vf_hqdn3d.c
     - vf_hue.c
     - vf_mp.c
+    - vf_pp.c
     - vf_smartblur.c
     - vf_super2xsai.c
     - vf_tinterlace.c
