@@ -49,12 +49,12 @@ do_lavfi "idet"               "idet"
 do_lavfi "null"               "null"
 do_lavfi "overlay"            "split[m],scale=88:72,pad=96:80:4:4[o2];[m]fifo[o1],[o1][o2]overlay=240:16"
 do_lavfi "pad"                "pad=iw*1.5:ih*1.5:iw*0.3:ih*0.2"
-do_lavfi "pp"                 "mp=pp=be/hb/vb/tn/l5/al"
-do_lavfi "pp2"                "mp=pp=be/fq:16/h1/v1/lb"
-do_lavfi "pp3"                "mp=pp=be/fq:8/ha:128:7/va/li"
-do_lavfi "pp4"                "mp=pp=be/ci"
-do_lavfi "pp5"                "mp=pp=md"
-do_lavfi "pp6"                "mp=pp=be/fd"
+do_lavfi "pp"                 "pp=be/hb/vb/tn/l5/al"
+do_lavfi "pp2"                "pp=be/fq:16/h1/v1/lb"
+do_lavfi "pp3"                "pp=be/fq:8/ha:128:7/va/li"
+do_lavfi "pp4"                "pp=be/ci"
+do_lavfi "pp5"                "pp=md"
+do_lavfi "pp6"                "pp=be/fd"
 do_lavfi "scale200"           "scale=200:200"
 do_lavfi "scale500"           "scale=500:500"
 do_lavfi "select"             "select=not(eq(mod(n\,2)\,0)+eq(mod(n\,3)\,0))"
