@@ -48,6 +48,7 @@ version <next>:
 - apad filter
 - adaptive frame-level multithreading for H.264
 - documentation split into per-component manuals
+- pp (postproc) filter ported from MPlayer
 
 
 version 1.0:
